// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormWizard Styled: shallow render & match the snapshot 1`] = `
.c0 {
  width: calc(100% - 304px);
  height: calc(100vh - 120px);
  position: relative;
  left: 304px;
  overflow-y: scroll;
  padding: 1.5rem 1.5rem 4rem;
}

<div
  className="c0"
/>
`;

exports[`FormWizard Styled: shallow render & match the snapshot 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0px;
}

.c1 {
  position: fixed;
  bottom: 0px;
  width: 100%;
  background: #FFFFFF;
  box-shadow: -2px 0px 8px 0px rgba(0,0,0,0.32);
}

<div
  className="c0 c1"
/>
`;

exports[`FormWizard Styled: shallow render & match the snapshot 3`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0px;
}

.c1 {
  width: 100%;
  background: #FFFFFF;
  border: 1px solid #E6E9EE;
}

<div
  className="c0 c1"
/>
`;

exports[`FormWizard Styled: shallow render & match the snapshot 4`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0px;
}

.c1 {
  background: #FFFFFF;
  width: 304px;
  height: 100vh;
  padding-top: 16px;
  padding-left: 32px;
  position: fixed;
}

<div
  className="c0 c1"
/>
`;

exports[`FormWizard shallow render & match the snapshot 1`] = `
<Unknown
  theme={
    Object {
      "COLORS": Object {
        "265AE0": "#265AE0",
        "300D6C": "#300D6C",
        "30DBD4": "#30DBD4",
        "461E96": "#461E96",
        "7844CF": "#7844CF",
        "998FD7": "#998FD7",
        "9E33BB": "#9E33BB",
        "ACCENT_LIGHT_PURPLE": "#EFE5FF",
        "ALERT_RED": "#AB1A1A",
        "BACKGROUND_LIGHT_GRAY": "#EAEAEF",
        "BODY_LIGHT_333333": "#333333",
        "D9E7F2": "#D9E7F2",
        "D9F1E0": "#D9F1E0",
        "E0D1FC": "#E0D1FC",
        "EBA7A7": "#EBA7A7",
        "F2F2F2": "#F2F2F2",
        "F4EFFC": "#F4EFFC",
        "F4F3FB": "#F4F3FB",
        "F5C237": "#F5C237",
        "F7DFDF": "#F7DFDF",
        "F7F7F8": "#F7F7F8",
        "F9F5FF": "#F9F5FF",
        "FEF5D9": "#FEF5D9",
        "LIGHT_PRIMARY_6930ca33": "#6930ca33",
        "LIGHT_PRIMARY_FAF6FF": "#FAF6FF",
        "OVERLAY_BLACK_40": "#00000066",
        "OVERLAY_BLACK_50": "#00000080",
        "OVERLAY_GRAY_20": "#dedede33",
        "OVERLAY_GRAY_50": "#dedede80",
        "PRIMARY_BLUE": "#336BAC",
        "PRIMARY_DARK": "#1A1B28",
        "SECONDARY_DARK_GRAY": "#393736",
        "TEXT_MEDIUM_GRAY": "#A6A7B0",
        "TRANSPARENT_WHITE": "#FFFFFF1A",
        "alert": "#FEA50A",
        "bg": "#E6E9EE",
        "bgLight": "#F4F6F9",
        "black": "#000000",
        "body": "#2b2d42",
        "bodyLight": "#6B6C7B",
        "buttonTextColor": "#FFFFFF",
        "danger": "#CB2C2C",
        "dangerActiveBg": "#F5CECE",
        "dangerHoverBg": "#FBEAEA",
        "dangerSecondary": "#DF5555",
        "disabled": "#E6E5E8",
        "focused": "#130951",
        "globalHeaderText": "#fbfbfb",
        "headerBtnFill": "rgba(206, 177, 255, 0.2)",
        "hover": "#F2F2F2",
        "info": "#0061AB",
        "label": "#847f8d",
        "marketingPrimary": "#00B7B1",
        "marketingSecondary": "#f5b900",
        "neutral": "#D5D5D9",
        "placeholder": "#A6A7B0",
        "primary": "#6930CA",
        "selected": "#EFE5FF",
        "success": "#00A331",
        "timelineContentBg": "#E6E5E833",
        "underReviewFill": "#D68309",
        "warning": "#D68309",
        "warningBg": "rgba(214,131,9,0.1)",
        "white": "#FFFFFF",
      },
      "DEVICE": Object {
        "desktop": "@media (max-width: 2560px)",
        "desktopL": "@media (max-width: 2560px)",
        "laptop": "@media (max-width: 1024px)",
        "laptopL": "@media (max-width: 1440px)",
        "mobileL": "@media (max-width: 481px)",
        "mobileM": "@media (max-width: 375px)",
        "mobileS": "@media (max-width: 320px)",
        "tablet": "@media (max-width: 768px)",
      },
      "FONTS": Object {
        "bold": "dm-sans-bold",
        "light": "dm-sans-light",
        "medium": "dm-sans-medium",
        "normal": "dm-sans-regular",
        "semi_bold": "dm-sans-semi-bold",
        "super_bold": "dm-sans-super-bold",
      },
      "GLOBAL_SIDEBAR": Object {
        "bg": "#6933D3",
        "brandBg": "#6933D3",
        "envSwitch": "#FFFFFF",
        "envSwitchAlt": "#5222b4",
        "envSwitchAltHover": "#865be5",
        "primaryBtn": "#E6E5E8",
        "secondaryBtn": "#E6E5E8",
        "selected": "#13095199",
        "text": "#EFE5FF",
      },
      "SCROLL_BAR_WIDTH": Object {
        "large": "12px",
        "medium": "10px",
        "small": "8px",
      },
      "TEXT": Object {
        "b10": Object {
          "fontSize": 10,
          "lineHeight": 12,
          "weight": 400,
        },
        "b12": Object {
          "fontSize": 12,
          "lineHeight": 16.8,
          "weight": 600,
        },
        "b14": Object {
          "fontSize": 14,
          "lineHeight": 19.6,
          "weight": 500,
        },
        "h14": Object {
          "fontSize": 14,
          "lineHeight": 19.6,
          "weight": 600,
        },
        "h16": Object {
          "fontSize": 16,
          "lineHeight": 22.4,
          "weight": 500,
        },
        "h20": Object {
          "fontSize": 20,
          "letterSpacing": -0.48,
          "lineHeight": 24,
          "weight": 600,
        },
        "h28": Object {
          "fontSize": 28,
          "letterSpacing": -0.56,
          "lineHeight": 34,
          "weight": 400,
        },
        "h8": Object {
          "fontSize": 8,
          "letterSpacing": 2,
          "lineHeight": 10,
          "weight": 500,
        },
        "p14": Object {
          "fontSize": 14,
          "lineHeight": 20,
          "weight": 500,
        },
      },
    }
  }
>
  <Unknown
    activeIndex={0}
    closeConfirm={
      Object {
        "body": "Are you sure you want to close?",
        "title": "Confirm Close",
      }
    }
    header={
      Object {
        "actionButtons": [MockFunction],
        "subTitle": "Test SubHeader",
        "title": "Test Header",
      }
    }
    items={
      Array [
        Object {
          "label": "Step 1",
          "render": [MockFunction],
          "requiredFields": [MockFunction],
        },
        Object {
          "label": "Step 2",
          "render": [MockFunction],
          "requiredFields": [MockFunction],
        },
      ]
    }
    onClose={[MockFunction]}
    onStepChange={[MockFunction]}
  />
</Unknown>
`;
